--- a/readme
+++ b/readme
@@ -1,2 +1,40 @@
+<div align='center'>
 
+<p>Mini project in Node Js </p>
+
+<h4> <span> · </span> <a href="https://github.com/SamantaMancini/Node-Js-Odin/blob/master/README.md"> Documentation </a> <span> · </span> <a href="https://github.com/SamantaMancini/Node-Js-Odin/issues"> Report Bug </a> <span> · </span> <a href="https://github.com/SamantaMancini/Node-Js-Odin/issues"> Request Feature </a> </h4>
+
+
+</div>
+
+# :notebook_with_decorative_cover: Table of Contents
+
+- [About the Project](#star2-about-the-project)
+- [Acknowledgements](#gem-acknowledgements)
+
+
+## :star2: About the Project
+### :space_invader: Tech Stack
+<details> <summary>Client</summary> <ul>
+<li><a href="">Javascript</a></li>
+</ul> </details>
+<details> <summary>Server</summary> <ul>
+<li><a href="">Node Js</a></li>
+</ul> </details>
+
+## :toolbox: Getting Started
+
+### :gear: Installation
+
+Npm install
+```bash
+npm install
+```
+
+
+## :gem: Acknowledgements
+
+Use this section to mention useful resources and libraries that you have used in your projects.
+
+- [Node js]()
 
